Fix select behaviour with long text
Previously when the select text was too long, it would push the caret down.
Now the text is truncated first and uses ellipsis.
References #811

--- a/src/sass/objects/_forms.selects.scss
+++ b/src/sass/objects/_forms.selects.scss
@@ -118,8 +118,11 @@ select.#{$ns}-select {
 	display: block;
 	font-weight: normal;
 	line-height: 33px;
-	padding: 5px 15px;
+	overflow: hidden;
+	padding: $xui-s-xsmall $xui-s-xxlarge $xui-s-xsmall $xui-s-standard;
 	text-align: left;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 	width: 100%;
 
 	&::after {
